app/assets/stylesheets/mixins.less
@import "./variables.less";
@import "./vendor/bootstrap/less/mixins.less";

@overviewPageHeaderMarginTop: 2em;
@overviewPageHeaderLineHeight: 3em;
@overviewPageHeaderMarginBottom: 1em;

.overview-page-header() {
  // Undo Twitter Bootstrap styles
  // XXX remove this stuff when Twitter Bootstrap is removed
  margin: @overviewPageHeaderMarginTop 0 @overviewPageHeaderMarginBottom;
  padding-bottom: 0;
  border: none;

  // And now, the styles we want:
  h1 {
    margin: 0;
    padding: 0;
    font-family: @font-family-sans-serif;
    font-weight: normal;
    text-transform: uppercase;
    font-size: 2em;
    line-height: 1.5;
    color: @brand-primary;
    border-bottom: 1px solid @brand-primary;
  }
}

.overview-toplevel-box() {
  .box-shadow(1px 1px 3px 1px @shade);
  .border-radius(5px);
}

.overview-help-box() {
  .border-radius(5px);
  border: 1px solid @text-color;
  font: 1em @font-family-serif;
  position: relative;
  margin-top: 1.2em;
  background-color: @help-bg;

  p {
    margin: 1em;
  }
}

// Set this on a ul.tags to make 2d-looking tags
.tag-list-2d() {
  display: block;
  margin: 0 -.5em 0 0;
  padding: 0;
  list-style: none;

  li {
    display: inline-block;
    margin: .3em .5em .3em 0;
  }

  div.tag {
    font-weight: normal;
    font-size: .8em;
    padding: 0 .5em;
    .border-radius(.5em);

    a { display: none; } // this button doesn't work yet

    @shadow: rgba(255, 255, 255, .8);
    text-shadow:
      -1px -1px 0 @shadow,
      1px 1px 0 @shadow,
      -1px 1px 0 @shadow,
      1px -1px 0 @shadow;
  }
}

.faded-link() {
  color: @link-color;
  opacity: 0.4;
  .transition(opacity .15s ease);

  &:hover {
    opacity: 1;
  }
}

